changed vertical spacing on message input, undid timestamp separation and used linebreaks to prevent a long line of text.

--- a/site/public/css/chatroom.css
+++ b/site/public/css/chatroom.css
@@ -83,6 +83,8 @@
     font-size: 1rem;
     flex: 1;
     margin-right: 0.5rem;
+    min-height: 34px;
+    padding-top: 7px;
     min-width: 0;
 }
 
